--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ USER= JulioC1712
 PASSWORD=159753
 email=tiendafins@gmail.com
 clave_email=jalq vxlg vguv tiih 
-base_url=https://tiendafitness.onrender.com
+base_url=https://p3-30-703-432.onrender.com
