--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 USER= JulioC1712
 PASSWORD=159753
 email=tiendafins@gmail.com
-clave_email=jalq vxlg vguv tiih 
+clave_email=jalqvxlgvguvtiih 
 base_url=https://p3-30-703-432.onrender.com
